1. fixed an issue where the 'view all' and 'show all' buttons in dropdowns were doing outside of the dropdown container on several pages 2. fixed an issue on Close Account page where the subscribe button in footer was misaligned 3. fixed alignment of username dropdown in navbar on some pages 4. on Show Search and My Notes pages, the success alert is now properly aligned with other sections 5. fixed alignment of Send button Help Center page

--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -6097,7 +6097,7 @@ td.flinks a
 .searchcontainer button {
     float: right;
     padding: 12px 16px;
-    margin-top: -56px;
+    margin-top: -56px !important;
     margin-right: -4px;
     background: #ddd;
     font-size: 17px;
